# benchmarks

./: .pre-commit-config.yaml  README.md  asv.conf.json  pyproject.toml  setup.cfg
.github/workflows/: asv_benchmark_main.yml  asv_benchmarks_pr.yml  tests.yml
src/: asv.conf.json  benchmark_lfe.py  benchmark_outlines.py  benchmark_outlines_core.py  data.py  lfe.py  outlines.py  outlines_core.py
src/samples/: complex_str.json  gsm8k.json  long_integer.json  phone_number.json  recording_schema.json  rpg_characters.json  url.json
