[project]
name = "outlines_benchmark"
version = "0.1"
authors = [{"name" = "The Outlines developers"}]
description = "A benchmarking suite for structured generation libraries."
requires-python = ">=3.10"
dependencies = [
    "lm-format-enforcer==0.10.6",
    "outlines==0.0.45",
    "outlines-core==0.1.0",
    "torch==2.4.0",
    "transformers==4.44.0",
]
