[project]
name = "outlines_benchmark"
version = "0.1"
authors = [{"name" = "The Outlines developers"}]
description = "A benchmarking suite for structured generation libraries."
requires-python = ">=3.10"
dependencies = [
    "lm-format-enforcer==0.10.7",
    "outlines==0.0.46",
    "outlines-core",
    "torch==2.4.0",
    "transformers==4.44.0",
]
